# local-wake

./: .gitignore  LICENSE  README.md  compare.py  embedding.py  features.py  listen.py  pyproject.toml  record.py  respeaker.md
benchmark/: README.md  benchmark.py
examples/okay-rhasspy/: README.md
lwake/: __init__.py  compare.py  features.py  listen.py  record.py
lwake/models/: speech-embedding.onnx
