[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "local-wake"
version = "0.1.0"
description = "Local wake word detection using a small set of user-provided recordings"
authors = [{ name = "Stanislau Matskevich" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = [
    "onnxruntime",
    "silero-vad",
    "librosa", 
    "sounddevice",
    "soundfile",
    "numpy"
]

[project.scripts]
lwake = "lwake.cli:main"

[tool.setuptools]
packages = ["lwake"]

[tool.setuptools.package-data]
lwake = ["models/*.onnx"]