[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "local-wake"
version = "0.1.0"
description = "Lightweight local wake word detection that recognizes phrases with just a few user-provided recordings. No model training required."
authors = [{ name = "Stanislau Matskevich", email="st.matskevich@gmail.com" }]
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.9"
dependencies = [
    "onnxruntime",
    "silero-vad",
    "librosa", 
    "sounddevice",
    "soundfile",
    "numpy"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]

[project.urls]
Repository = "https://github.com/st-matskevich/local-wake"

[project.scripts]
lwake = "lwake.cli:main"

[tool.setuptools]
packages = ["lwake"]

[tool.setuptools.package-data]
lwake = ["models/*.onnx"]